[package]
name = "eventual"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
com= {path =  "../utils/com"}
redis_store= {path =  "../utils/redis_store"}
net={path = "../utils/net"}
nodes={path = "../utils/nodes"}
